# src/swagger.yaml
@@ -114,6 +114,7 @@ components:
         - firstName
         - lastName
         - staffId
+        - designation
       properties:
         email:
           type: string
@@ -138,8 +139,11 @@ components:
           example: "LCU/STF/001"
         designation:
           type: string
-          example: "Lecturer"
-          nullable: true
+          example: "lecturer"
+          enum:
+            - lecturer
+            - assistant
+            - librarian
 
     LoginRequest:
       type: object
@@ -219,8 +223,11 @@ components:
           description: Required when role is staff.
         designation:
           type: string
-          description: Optional staff designation.
-          nullable: true
+          description: Required when role is staff.
+          enum:
+            - lecturer
+            - assistant
+            - librarian
 
     CreateAdminOrStaffResponse:
       type: object
